<resources>
    <string name="app_name">Assignment11-2</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_save">Save</string>
    <string name="bt_submit">Submit</string>
    <string name="bt_download">Download</string>
    <string name="bt_auto_insert">Auto Insert</string>
    <string name="food_name">Food name</string>
    <string name="food_price">Food price</string>
    <string name="food_description">Food description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="food">Food</string>
    <string name="food_dialog_title">Add or update food</string>
    <string name="food_image">Food image</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="food_quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="total_price">Total</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

