<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_food"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:id="@+id/tv_food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="10"
                android:maxLines="1"
                android:text="@string/food_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_food_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/food_price"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_food_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/food_description"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
