<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_food"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="?attr/borderlessButtonStyle"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="8dp"
                app:icon="@drawable/ic_back"
                app:iconGravity="start"
                app:iconSize="24dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/tv_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/food_name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_food_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/food_price"
                    android:textSize="16sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_food_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/food_description"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <!--            <com.google.android.material.button.MaterialButton-->
            <!--                android:id="@+id/btn_back"-->
            <!--                style="?attr/borderlessButtonStyle"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/back" />-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <ImageButton
                    android:id="@+id/img_add_to_cart"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_add_shopping_cart"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/img_update"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_edit"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/img_delete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_delete"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>